--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
 
       <div class="hero__box1">
-        <h1 class="hero__box1-intro">hello.</h1>
+        <h1 class="hero__box1-intro">Hello.</h1>
       </div>
       <div class="hero__box2">
         <h2 class="hero__box2-name">I'm Alec</h2>
