add more html & css until cta of hero page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
 
     <div class="hero">
       <div class="hero__lines">
+        <svg width="280" height="280">
+          <foreignobject>
+            <div class="words-1 words-opacity">
+              <span class="words__draw">DRAW</span>
+              <span class="words__code">CODE</span>
+            </div>
+            <div class="words-2 words-opacity">
+              <span class="words__play">PLAY</span>
+              <span class="words__design">DESIGN</span>
+            </div>
+          </foreignobject>
+          <line class="hero__lines-top" x1="470" y1="9" x2="280" y2="9" />
+          <line class="hero__lines-left" x1="8" y1="-190" x2="8" y2="0" />
+          <line class="hero__lines-right" x1="272" y1="280" x2="272" y2="470" />
+          <line class="hero__lines-bottom" x1="-180" y1="271" x2="0" y2="271" />
+        </svg>
       </div>
 
       <div class="hero__box1">
@@ -33,6 +49,12 @@
           and work as an illustrator and designer on the side.
         </p>
         <a href="#" class="hero__box2-cta">Click to start browsing.</a>
+      </div>
+      <div class="hero__cta">
+        <p class="hero__cta-call">SCROLL NOW OR JUST KEEP STARING AT THE ROTATING BOX.</p>
+      </div>
+      <div class="hero__image">
+
       </div>
     </div>
   </body>
