add more css july 14

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 
   <body>
 
-    <header class="header">
-      <div class="header__logo">
 
-      </div>
-    </header>
+    <div class="page-wrapper">
+      <header class="header">
+        <div class="header__logo">
+
+        </div>
+      </header>
 
       <div class="hero">
         <div class="hero__lines">
@@ -54,10 +56,9 @@
         <div class="hero__cta">
           <p class="hero__cta-call">SCROLL NOW OR JUST KEEP STARING AT THE ROTATING BOX.</p>
         </div>
-        <!-- <div class="hero__image">
-
-      </div> -->
       </div>
+
+    </div>
 
   </body>
 
