add padding on css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <div class="page-wrapper">
       <header class="header">
         <div class="header__logo">
-
         </div>
       </header>
 
@@ -53,11 +52,21 @@
           </p>
           <a href="#" class="hero__box2-cta">Click to start browsing.</a>
         </div>
+        <div class="hero__nav">
+          <li class="hero__nav-list">
+            <ul class="hero__nav-list__home">HOME</ul>
+            <ul class="hero__nav-list__projects">PROJECTS</ul>
+            <ul class="hero__nav-list__contact">CONTACT</ul>
+          </li>
+        </div>
         <div class="hero__cta">
           <p class="hero__cta-call">SCROLL NOW OR JUST KEEP STARING AT THE ROTATING BOX.</p>
         </div>
       </div>
 
+      <div class="web-design">
+
+      </div>
     </div>
 
   </body>
