--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="reset.css">
 
+
+
   </head>
 
   <body>
@@ -68,6 +70,10 @@
 
       </div>
     </div>
+
+
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/main.js"></script>
 
   </body>
 
