work on first box on web design page

--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@
       </div>
 
       <div class="web-design">
+        <div class="web-design__box">
+          <svg width="236" height="272">
+            <foreignobject width="236" height="272">
+              <h1 class="web-design__box-title">WEB DES IGN.
+              </h1>
+              <a href="#" class="web-design__box-link">See Projects</a>
+            </foreignobject>
+            <line class="" x1="0" y1="0" x2="236" y2="0"/>
+            <line class="" x1="236" y1="0" x2="236" y2="272"/>
+            <line class="" x1="165" y1="272" x2="236" y2="272"/>
+          </svg>
+        </div>
       </div>
     </div>
 
