added images on web design sect

--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
             <line class="" x1="165" y1="272" x2="236" y2="272"/>
           </svg>
         </div>
+        <div class="web-design__images">
+          <img src="assets/shadow.png" alt="" class="web-design__images-shadow">
+          <img src="assets/jones.png" alt="" class="web-design__images-jones">
+          <img src="assets/verve.png" alt="" class="web-design__images-verve">
+          <img src="assets/beastletics.png" alt="" class="web-design__images-beastletics">
+        </div>
       </div>
     </div>
 
