--- a/index.html
+++ b/index.html
@@ -74,16 +74,24 @@
               </h1>
               <a href="#" class="web-design__box-link">See Projects</a>
             </foreignobject>
-            <line class="" x1="0" y1="0" x2="236" y2="0"/>
-            <line class="" x1="236" y1="0" x2="236" y2="272"/>
-            <line class="" x1="165" y1="272" x2="236" y2="272"/>
+            <line class="web-design__box-top" x1="-236" y1="0" x2="0" y2="0"/>
+            <line class="web-design__box-right" x1="236" y1="-272" x2="236" y2="0"/>
+            <line class="web-design__box-bottom" x1="236" y1="272" x2="307" y2="272"/>
           </svg>
         </div>
         <div class="web-design__images">
-          <img src="assets/shadow.png" alt="" class="web-design__images-shadow">
-          <img src="assets/jones.png" alt="" class="web-design__images-jones">
-          <img src="assets/verve.png" alt="" class="web-design__images-verve">
-          <img src="assets/beastletics.png" alt="" class="web-design__images-beastletics">
+          <div class="web-design__images-shadow">
+            <img src="assets/shadow.png" alt="" class="">
+          </div>
+          <div class="web-design__images-jones">
+            <img src="assets/jones.png" alt="" class="">
+          </div>
+          <div class="web-design__images-verve">
+            <img src="assets/verve.png" alt="" class="">
+          </div>
+          <div class="web-design__images-beastletics">
+            <img src="assets/beastletics.png" alt="" class="">
+          </div>
         </div>
       </div>
     </div>
