added mobile design of web section

--- a/index.html
+++ b/index.html
@@ -79,6 +79,18 @@
             <line class="web-design__box-bottom" x1="236" y1="272" x2="307" y2="272"/>
           </svg>
         </div>
+        <div class="web-design__box2">
+          <svg width="280" height="92">
+            <foreignobject width="280" height="92">
+              <h1 class="web-design__box2-title">WEB&nbspDESIGN.
+              </h1>
+              <a href="#" class="web-design__box2-link">See Projects</a>
+            </foreignobject>
+            <line class="web-design__box2-top" x1="-280" y1="0" x2="0" y2="0"/>
+            <line class="web-design__box2-right" x1="280" y1="-92" x2="280" y2="0"/>
+            <line class="web-design__box2-bottom" x1="280" y1="92" x2="400" y2="92"/>
+          </svg>
+        </div>
         <div class="web-design__images">
           <div class="web-design__images-shadow">
             <img src="assets/shadow.png" alt="" class="">
@@ -92,6 +104,9 @@
           <div class="web-design__images-beastletics">
             <img src="assets/beastletics.png" alt="" class="">
           </div>
+        </div>
+        <div class="web-design__shadowmobile">
+          <img src="assets/shadow-mobile.png" alt="">
         </div>
       </div>
     </div>
