added illustration section

--- a/index.html
+++ b/index.html
@@ -109,6 +109,24 @@
           <img src="assets/shadow-mobile.png" alt="">
         </div>
       </div>
+      <div class="illustration">
+        <div class="illustration__image">
+
+        </div>
+        <div class="illustration__box">
+          <svg width="231" height="345">
+            <foreignobject width="231" height="345">
+              <h1 class="illustration__box-title">ILL UST RAT ION.
+              </h1>
+              <a href="#" class="illustration__box-link">View Gallery</a>
+            </foreignobject>
+            <line class="illustration__box-top" x1="-0" y1="0" x2="231" y2="0"/>
+            <line class="illustration__box-right" x1="0" y1="0" x2="0" y2="345"/>
+            <line class="illustration__box-bottom" x1="0" y1="345" x2="40" y2="345"/>
+          </svg>
+        </div>
+
+      </div>
     </div>
 
 
