added animation on illustration section desktop

--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@
               </h1>
               <a href="#" class="illustration__box-link">View Gallery</a>
             </foreignobject>
-            <line class="illustration__box-top" x1="-0" y1="0" x2="231" y2="0"/>
-            <line class="illustration__box-right" x1="0" y1="0" x2="0" y2="345"/>
-            <line class="illustration__box-bottom" x1="0" y1="345" x2="40" y2="345"/>
+            <line class="illustration__box-top" x1="231" y1="0" x2="462" y2="0"/>
+            <line class="illustration__box-left" x1="0" y1="-345" x2="0" y2="0"/>
+            <line class="illustration__box-bottom" x1="-40" y1="345" x2="0" y2="345"/>
           </svg>
         </div>
 
