worked on illustration sect desktop and mobile

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
               </h1>
               <a href="#" class="web-design__box2-link">See Projects</a>
             </foreignobject>
-            <line class="web-design__box2-top" x1="-280" y1="0" x2="0" y2="0"/>
-            <line class="web-design__box2-right" x1="280" y1="-92" x2="280" y2="0"/>
-            <line class="web-design__box2-bottom" x1="280" y1="92" x2="400" y2="92"/>
+            <line class="web-design__box2-top" x1="0" y1="0" x2="280" y2="0"/>
+            <line class="web-design__box2-right" x1="280" y1="0" x2="280" y2="92"/>
+            <line class="web-design__box2-bottom" x1="160" y1="92" x2="280" y2="92"/>
           </svg>
         </div>
         <div class="web-design__images">
@@ -110,6 +110,18 @@
         </div>
       </div>
       <div class="illustration">
+        <div class="illustration__box2">
+          <svg width="280" height="92">
+            <foreignobject width="280" height="95">
+              <h1 class="illustration__box2-title">illustration.
+              </h1>
+              <a href="#" class="illustration__box2-link">View Gallery</a>
+            </foreignobject>
+            <line class="illustration__box2-top" x1="0" y1="0" x2="280" y2="0"/>
+            <line class="illustration__box2-right" x1="0" y1="0" x2="0" y2="90"/>
+            <line class="illustration__box2-bottom" x1="0" y1="92" x2="116" y2="92"/>
+          </svg>
+        </div>
         <div class="illustration__image">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 573.78 620.98">
             <defs>
