addec contact section

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
           <img src="assets/shadow-mobile.png" alt="">
         </div>
       </div>
+
       <div class="illustration">
         <div class="illustration__box2">
           <svg width="280" height="92">
@@ -234,10 +235,30 @@
             <line class="illustration__box-bottom" x1="-40" y1="345" x2="0" y2="345"/>
           </svg>
         </div>
+      </div>
 
+      <div class="contact">
+        <h1 class="contact__title">Get in touch with me.</h1>
+        <div class="contact__social">
+          <div class="contact__social-buttons">
+
+          </div>
+          <div class="contact__social-buttons">
+
+          </div>
+          <div class="contact__social-buttons">
+
+          </div>
+          <div class="contact__social-buttons">
+
+          </div>
+        </div>
+        <div class="contact__logo">
+
+        </div>
+        <p class="copyright">© copyright calvo 2017</p>
       </div>
     </div>
-
 
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/main.js"></script>
