added icons into buttons and finished contact section

--- a/index.html
+++ b/index.html
@@ -241,20 +241,37 @@
         <h1 class="contact__title">Get in touch with me.</h1>
         <div class="contact__social">
           <div class="contact__social-buttons">
-
+            <svg class="email-container" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 28">
+              <g id="Layer_2" data-name="Layer 2">
+                <path class="email-icon" d="M2 0h36a2 2 0 0 1 .67.12L21.36 17.43a1.91 1.91 0 0 1-2.71 0L1.33.12A2 2 0 0 1 2 0zM0 26V2a2 2 0 0 1 0-.35L12.38 14 0 26.35A2 2 0 0 1 0 26zm38 2H2a2 2 0 0 1-.67-.12L13.8 15.41l3.43 3.43a3.91 3.91 0 0 0 5.54 0l3.43-3.43 12.47 12.47A2 2 0 0 1 38 28zm2-2a2 2 0 0 1 0 .35L27.62 14 40 1.65A2 2 0 0 1 40 2z" id="Web"/>
+              </g>
+            </svg>
           </div>
           <div class="contact__social-buttons">
-
+            <svg class="phone-container" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 40">
+              <g id="Layer_2" data-name="Layer 2">
+                <path class="phone-icon" d="M10 39a1 1 0 1 0-1-1 1 1 0 0 0 1 1zm10-1a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2h20zm0-4H0V6h20zm0-30H0V2a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2zm-9-3H9a1 1 0 0 0 0 2h2a1 1 0 0 0 0-2z" id="Electronics"/>
+              </g>
+            </svg>
           </div>
           <div class="contact__social-buttons">
-
+            <svg class="facebook-container" viewBox="0 0 9 18">
+              <g id="Layer_2" data-name="Layer 2">
+                <g id="Web">
+                  <path class="facebook-icon" d="M6 6V4.25C6 3.44 6.07 3 7.31 3H9V0H6.32C3.12 0 2 1.51 2 4v2H0v3h2v9h4V9h2.64L9 6z" id="Facebook_Square_2x.png" data-name="Facebook Square@2x.png"/>
+                </g>
+              </g>
+            </svg>
           </div>
           <div class="contact__social-buttons">
-
+            <svg class="instagram-container" viewBox="0 0 20 20">
+              <g id="Layer_2" data-name="Layer 2">
+                <path class="instagram-icon" d="M10 14a4 4 0 1 0-4-4 4 4 0 0 0 4 4zm7-11h-3v3h3zm3 13a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V4a4 4 0 0 1 4-4h12a4 4 0 0 1 4 4zm-4-6A6 6 0 1 1 4.1 9H2v7a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9h-2.1a6 6 0 0 1 .1 1z" id="Web"/>
+              </g>
+            </svg>
           </div>
         </div>
-        <div class="contact__logo">
-
+        <div class="footer__logo">
         </div>
         <p class="copyright">© copyright calvo 2017</p>
       </div>
