--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
         </div>
         <div class="hero__box2">
           <h2 class="hero__box2-name">I'm Alec</h2>
-          <p class="hero__box2-desc">I work as a designer/developer for Jones,
-            and work as an illustrator and designer on the side.
+          <p class="hero__box2-desc">A full-time designer/developer and a freelance illustrator.
           </p>
-          <a href="#" class="hero__box2-cta">Click to start browsing.</a>
+          <a href="#" class="hero__box2-cta">Scroll down to see my works.</a>
         </div>
         <div class="hero__nav">
           <li class="hero__nav-list">
@@ -72,7 +71,7 @@
             <foreignobject width="236" height="272">
               <h1 class="web-design__box-title">WEB DES IGN.
               </h1>
-              <a href="#" class="web-design__box-link">See Projects</a>
+              <a href="http://www.behance.net/aleccalvo2" target="_blank" class="web-design__box-link">See Projects</a>
             </foreignobject>
             <line class="web-design__box-top" x1="-236" y1="0" x2="0" y2="0"/>
             <line class="web-design__box-right" x1="236" y1="-272" x2="236" y2="0"/>
@@ -84,7 +83,7 @@
             <foreignobject width="280" height="92">
               <h1 class="web-design__box2-title">WEB&nbspDESIGN.
               </h1>
-              <a href="#" class="web-design__box2-link">See Projects</a>
+              <a href="http://www.behance.net/aleccalvo2" target="_blank" class="web-design__box2-link">See Projects</a>
             </foreignobject>
             <line class="web-design__box2-top" x1="0" y1="0" x2="280" y2="0"/>
             <line class="web-design__box2-right" x1="280" y1="0" x2="280" y2="92"/>
@@ -116,7 +115,7 @@
             <foreignobject width="280" height="95">
               <h1 class="illustration__box2-title">illustration.
               </h1>
-              <a href="#" class="illustration__box2-link">View Gallery</a>
+              <a href="https://www.artstation.com/aleccalvo08" target="_blank" class="illustration__box2-link">View Gallery</a>
             </foreignobject>
             <line class="illustration__box2-top" x1="0" y1="0" x2="280" y2="0"/>
             <line class="illustration__box2-right" x1="0" y1="0" x2="0" y2="90"/>
@@ -228,7 +227,7 @@
             <foreignobject width="231" height="345">
               <h1 class="illustration__box-title">ILL UST RAT ION.
               </h1>
-              <a href="#" class="illustration__box-link">View Gallery</a>
+              <a href="https://www.artstation.com/aleccalvo08" target="_blank" class="illustration__box-link">View Gallery</a>
             </foreignobject>
             <line class="illustration__box-top" x1="231" y1="0" x2="462" y2="0"/>
             <line class="illustration__box-left" x1="0" y1="-345" x2="0" y2="0"/>
@@ -240,36 +239,36 @@
       <div class="contact">
         <h1 class="contact__title">Get in touch with me.</h1>
         <div class="contact__social">
-          <div class="contact__social-buttons">
-            <svg class="email-container" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 28">
-              <g id="Layer_2" data-name="Layer 2">
-                <path class="email-icon" d="M2 0h36a2 2 0 0 1 .67.12L21.36 17.43a1.91 1.91 0 0 1-2.71 0L1.33.12A2 2 0 0 1 2 0zM0 26V2a2 2 0 0 1 0-.35L12.38 14 0 26.35A2 2 0 0 1 0 26zm38 2H2a2 2 0 0 1-.67-.12L13.8 15.41l3.43 3.43a3.91 3.91 0 0 0 5.54 0l3.43-3.43 12.47 12.47A2 2 0 0 1 38 28zm2-2a2 2 0 0 1 0 .35L27.62 14 40 1.65A2 2 0 0 1 40 2z" id="Web"/>
-              </g>
-            </svg>
-          </div>
-          <div class="contact__social-buttons">
-            <svg class="phone-container" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 40">
-              <g id="Layer_2" data-name="Layer 2">
-                <path class="phone-icon" d="M10 39a1 1 0 1 0-1-1 1 1 0 0 0 1 1zm10-1a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2h20zm0-4H0V6h20zm0-30H0V2a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2zm-9-3H9a1 1 0 0 0 0 2h2a1 1 0 0 0 0-2z" id="Electronics"/>
-              </g>
-            </svg>
-          </div>
-          <div class="contact__social-buttons">
-            <svg class="facebook-container" viewBox="0 0 9 18">
-              <g id="Layer_2" data-name="Layer 2">
-                <g id="Web">
-                  <path class="facebook-icon" d="M6 6V4.25C6 3.44 6.07 3 7.31 3H9V0H6.32C3.12 0 2 1.51 2 4v2H0v3h2v9h4V9h2.64L9 6z" id="Facebook_Square_2x.png" data-name="Facebook Square@2x.png"/>
+              <a class="contact__social-buttons" href="mailto:aleccalvo08@gmail.com" target="_blank">
+              <svg class="email-container" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 28">
+                <g id="Layer_2" data-name="Layer 2">
+                  <path class="email-icon" d="M2 0h36a2 2 0 0 1 .67.12L21.36 17.43a1.91 1.91 0 0 1-2.71 0L1.33.12A2 2 0 0 1 2 0zM0 26V2a2 2 0 0 1 0-.35L12.38 14 0 26.35A2 2 0 0 1 0 26zm38 2H2a2 2 0 0 1-.67-.12L13.8 15.41l3.43 3.43a3.91 3.91 0 0 0 5.54 0l3.43-3.43 12.47 12.47A2 2 0 0 1 38 28zm2-2a2 2 0 0 1 0 .35L27.62 14 40 1.65A2 2 0 0 1 40 2z" id="Web"/>
                 </g>
-              </g>
-            </svg>
-          </div>
-          <div class="contact__social-buttons">
-            <svg class="instagram-container" viewBox="0 0 20 20">
-              <g id="Layer_2" data-name="Layer 2">
-                <path class="instagram-icon" d="M10 14a4 4 0 1 0-4-4 4 4 0 0 0 4 4zm7-11h-3v3h3zm3 13a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V4a4 4 0 0 1 4-4h12a4 4 0 0 1 4 4zm-4-6A6 6 0 1 1 4.1 9H2v7a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9h-2.1a6 6 0 0 1 .1 1z" id="Web"/>
-              </g>
-            </svg>
-          </div>
+              </svg>
+            </a>
+              <a class="contact__social-buttons" href="tel:647-967-7256" target="_blank">
+              <svg class="phone-container" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 40">
+                <g id="Layer_2" data-name="Layer 2">
+                  <path class="phone-icon" d="M10 39a1 1 0 1 0-1-1 1 1 0 0 0 1 1zm10-1a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2h20zm0-4H0V6h20zm0-30H0V2a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2zm-9-3H9a1 1 0 0 0 0 2h2a1 1 0 0 0 0-2z" id="Electronics"/>
+                </g>
+              </svg>
+            </a>
+              <a class="contact__social-buttons" href="http://facebook.com/alec.calvo" target="_blank">
+              <svg class="facebook-container" viewBox="0 0 9 18">
+                <g id="Layer_2" data-name="Layer 2">
+                  <g id="Web">
+                    <path class="facebook-icon" d="M6 6V4.25C6 3.44 6.07 3 7.31 3H9V0H6.32C3.12 0 2 1.51 2 4v2H0v3h2v9h4V9h2.64L9 6z" id="Facebook_Square_2x.png" data-name="Facebook Square@2x.png"/>
+                  </g>
+                </g>
+              </svg>
+            </a>
+              <a class="contact__social-buttons" href="http://instagram.com/celaart" target="_blank">
+              <svg class="instagram-container" viewBox="0 0 20 20">
+                <g id="Layer_2" data-name="Layer 2">
+                  <path class="instagram-icon" d="M10 14a4 4 0 1 0-4-4 4 4 0 0 0 4 4zm7-11h-3v3h3zm3 13a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V4a4 4 0 0 1 4-4h12a4 4 0 0 1 4 4zm-4-6A6 6 0 1 1 4.1 9H2v7a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9h-2.1a6 6 0 0 1 .1 1z" id="Web"/>
+                </g>
+              </svg>
+            </a>
         </div>
         <div class="footer__logo">
         </div>
