--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </li>
         </div>
         <div class="hero__cta">
-          <p class="hero__cta-call">SCROLL NOW OR JUST KEEP STARING AT THE ROTATING BOX.</p>
+          <p class="hero__cta-call">This looks better on desktop. Just Saying.</p>
         </div>
       </div>
 
