--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>CALVO Portfolio</title>
+    <title>Calvo.</title>
     <meta name="description" content="">
     <meta name="author" content="Alec">
 
@@ -61,7 +61,7 @@
           </li>
         </div>
         <div class="hero__cta">
-          <p class="hero__cta-call">SCROLL NOW OR JUST KEEP STARING AT THE ROTATING BOX.</p>
+          <p class="hero__cta-call">This looks better on desktop. Just Saying.</p>
         </div>
       </div>
 
