fix title and spacings

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>CALVO Portfolio</title>
+    <title>CALVO</title>
     <meta name="description" content="">
     <meta name="author" content="Alec">
 
