--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <div class="hero__box2">
           <h2 class="hero__box2-name">I'm Alec</h2>
-          <p class="hero__box2-desc">A full-time designer/developer and a freelance illustrator.
+          <p class="hero__box2-desc">A full-time designer/developer and a freelance illustrator based in Toronto.
           </p>
           <a href="#" class="hero__box2-cta">Scroll down to see my works.</a>
         </div>
@@ -65,47 +65,46 @@
         </div>
       </div>
 
-      <div class="web-design">
-        <div class="web-design__box">
-          <svg width="236" height="272">
-            <foreignobject width="236" height="272">
-              <h1 class="web-design__box-title">WEB DES IGN.
-              </h1>
-              <a href="http://www.behance.net/aleccalvo2" target="_blank" class="web-design__box-link">See Projects</a>
-            </foreignobject>
-            <line class="web-design__box-top" x1="-236" y1="0" x2="0" y2="0"/>
-            <line class="web-design__box-right" x1="236" y1="-272" x2="236" y2="0"/>
-            <line class="web-design__box-bottom" x1="236" y1="272" x2="307" y2="272"/>
-          </svg>
-        </div>
-        <div class="web-design__box2">
-          <svg width="280" height="92">
-            <foreignobject width="280" height="92">
-              <h1 class="web-design__box2-title">WEB&nbspDESIGN.
-              </h1>
-              <a href="http://www.behance.net/aleccalvo2" target="_blank" class="web-design__box2-link">See Projects</a>
-            </foreignobject>
-            <line class="web-design__box2-top" x1="0" y1="0" x2="280" y2="0"/>
-            <line class="web-design__box2-right" x1="280" y1="0" x2="280" y2="92"/>
-            <line class="web-design__box2-bottom" x1="160" y1="92" x2="280" y2="92"/>
-          </svg>
-        </div>
-        <div class="web-design__images">
-          <div class="web-design__images-shadow">
-            <img src="assets/shadow.png" alt="" class="">
+      <div class="web-design-container">
+        <div class="web-design">
+          <div class="web-design__box">
+            <svg width="236" height="272">
+              <foreignobject width="236" height="272">
+                <h1 class="web-design__box-title">WEB DES IGN.
+                </h1>
+                <a href="http://www.behance.net/aleccalvo2" target="_blank" class="web-design__box-link">See Projects</a>
+              </foreignobject>
+              <line class="web-design__box-top" x1="-236" y1="0" x2="0" y2="0"/>
+              <line class="web-design__box-right" x1="236" y1="-272" x2="236" y2="0"/>
+              <line class="web-design__box-bottom" x1="236" y1="272" x2="307" y2="272"/>
+            </svg>
           </div>
-          <div class="web-design__images-jones">
-            <img src="assets/jones.png" alt="" class="">
+          <div class="web-design__box2">
+            <svg width="280" height="92">
+              <foreignobject width="280" height="92">
+                <h1 class="web-design__box2-title">WEB&nbspDESIGN.
+                </h1>
+                <a href="http://www.behance.net/aleccalvo2" target="_blank" class="web-design__box2-link">See Projects</a>
+              </foreignobject>
+              <line class="web-design__box2-top" x1="0" y1="0" x2="280" y2="0"/>
+              <line class="web-design__box2-right" x1="280" y1="0" x2="280" y2="92"/>
+              <line class="web-design__box2-bottom" x1="160" y1="92" x2="280" y2="92"/>
+            </svg>
           </div>
-          <div class="web-design__images-verve">
-            <img src="assets/verve.png" alt="" class="">
+          <div class="web-design__images">
+            <div class="web-design__images-jones">
+              <img src="assets/jones.png" alt="" class="">
+            </div>
+            <div class="web-design__images-verve">
+              <img src="assets/verve.png" alt="" class="">
+            </div>
+            <div class="web-design__images-beastletics">
+              <img src="assets/beastletics.png" alt="" class="">
+            </div>
           </div>
-          <div class="web-design__images-beastletics">
-            <img src="assets/beastletics.png" alt="" class="">
+          <div class="web-design__shadowmobile">
+            <img src="assets/shadow-mobile.png" alt="">
           </div>
-        </div>
-        <div class="web-design__shadowmobile">
-          <img src="assets/shadow-mobile.png" alt="">
         </div>
       </div>
 
@@ -253,14 +252,10 @@
                 </g>
               </svg>
             </a>
-              <a class="contact__social-buttons" href="http://facebook.com/alec.calvo" target="_blank">
-              <svg class="facebook-container" viewBox="0 0 9 18">
-                <g id="Layer_2" data-name="Layer 2">
-                  <g id="Web">
-                    <path class="facebook-icon" d="M6 6V4.25C6 3.44 6.07 3 7.31 3H9V0H6.32C3.12 0 2 1.51 2 4v2H0v3h2v9h4V9h2.64L9 6z" id="Facebook_Square_2x.png" data-name="Facebook Square@2x.png"/>
-                  </g>
-                </g>
-              </svg>
+              <a class="contact__social-buttons" href="https://www.linkedin.com/in/alec-calvo-879b99a3/" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" class="linkedin-container" viewBox="0 0 17 16">
+                      <path class="linkedin-icon" d="M0 16h4V5H0zM13.36 5C10.39 5 10 6.77 10 6.77V5H6v11h4v-6s0-2 1.7-2c1 0 1.3.9 1.3 2v6h4v-6c0-3.13-1.36-5-3.64-5zM2 0a2 2 0 1 0 2 2 2 2 0 0 0-2-2z" id="LinkedIn_Square" data-name="LinkedIn Square"/>
+                </svg>
             </a>
               <a class="contact__social-buttons" href="http://instagram.com/celaart" target="_blank">
               <svg class="instagram-container" viewBox="0 0 20 20">
