--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <h2 class="hero__box2-name">I'm Alec</h2>
           <p class="hero__box2-desc">A full-time designer/developer and a freelance illustrator based in Toronto.
           </p>
-          <a href="#" class="hero__box2-cta">Scroll down to see my works.</a>
+          <a href="#" class="hero__box2-cta">email: aleccalvo08@gmail.com</a>
         </div>
         <div class="hero__nav">
           <li class="hero__nav-list">
@@ -59,6 +59,11 @@
             <ul class="hero__nav-list__projects">PROJECTS</ul>
             <ul class="hero__nav-list__contact">CONTACT</ul>
           </li>
+        </div>
+        <div class="hero__scroll">
+          <svg class="hero__scroll-container">
+            <line class="hero__scroll-line" x1="0" y1="-100" x2="0" y2="0">
+          </svg>
         </div>
         <div class="hero__cta">
           <p class="hero__cta-call">This looks better on desktop. Just Saying.</p>
