added mobile animations for projects section

--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
                 </h1>
                 <a href="http://www.behance.net/aleccalvo2" target="_blank" class="web-design__box2-link">See Projects</a>
               </foreignobject>
-              <line class="web-design__box2-top" x1="0" y1="0" x2="280" y2="0"/>
-              <line class="web-design__box2-right" x1="280" y1="0" x2="280" y2="92"/>
-              <line class="web-design__box2-bottom" x1="160" y1="92" x2="280" y2="92"/>
+              <line class="web-design__box2-top" x1="-280" y1="0" x2="0" y2="0"/>
+              <line class="web-design__box2-right" x1="280" y1="-92" x2="280" y2="0"/>
+              <line class="web-design__box2-bottom" x1="280" y1="92" x2="400" y2="92"/>
             </svg>
           </div>
           <div class="web-design__images">
@@ -121,13 +121,13 @@
               </h1>
               <a href="https://www.artstation.com/aleccalvo08" target="_blank" class="illustration__box2-link">View Gallery</a>
             </foreignobject>
-            <line class="illustration__box2-top" x1="0" y1="0" x2="280" y2="0"/>
-            <line class="illustration__box2-right" x1="0" y1="0" x2="0" y2="90"/>
-            <line class="illustration__box2-bottom" x1="0" y1="92" x2="116" y2="92"/>
+            <line class="illustration__box2-top" x1="280" y1="0" x2="560" y2="0"/>
+            <line class="illustration__box2-right" x1="0" y1="-90" x2="0" y2="00"/>
+            <line class="illustration__box2-bottom" x1="-116" y1="92" x2="0" y2="92"/>
           </svg>
         </div>
         <div class="illustration__image">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 573.78 620.98">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 573.78 620.98" class="illustration__image-svg">
             <defs>
               <style>
                 .cls-1{fill:none;stroke:#000;stroke-miterlimit:10;stroke-width:0.5px;}
@@ -277,6 +277,7 @@
     </div>
 
     <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/jquery.waypoints.min.js"></script>
     <script src="js/main.js"></script>
 
   </body>
