small formating change

--- a/index.html
+++ b/index.html
@@ -243,7 +243,9 @@
       <div class="contact">
         <h1 class="contact__title">Get in touch with me.</h1>
         <div class="contact__social">
-              <a class="contact__social-buttons" href="mailto:aleccalvo08@gmail.com" target="_blank">
+              <a class="contact__social-buttons"
+                 href="mailto:aleccalvo08@gmail.com"
+                 target="_blank">
               <svg class="email-container" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 28">
                 <g id="Layer_2" data-name="Layer 2">
                   <path class="email-icon" d="M2 0h36a2 2 0 0 1 .67.12L21.36 17.43a1.91 1.91 0 0 1-2.71 0L1.33.12A2 2 0 0 1 2 0zM0 26V2a2 2 0 0 1 0-.35L12.38 14 0 26.35A2 2 0 0 1 0 26zm38 2H2a2 2 0 0 1-.67-.12L13.8 15.41l3.43 3.43a3.91 3.91 0 0 0 5.54 0l3.43-3.43 12.47 12.47A2 2 0 0 1 38 28zm2-2a2 2 0 0 1 0 .35L27.62 14 40 1.65A2 2 0 0 1 40 2z" id="Web"/>
