--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <h2 class="hero__box2-name">I'm Alec</h2>
           <p class="hero__box2-desc">A full-time designer/developer and a freelance illustrator based in Toronto.
           </p>
-          <a href="#" class="hero__box2-cta">email: aleccalvo08@gmail.com</a>
+          <a href="mailto:aleccalvo08@gmail.com" target="_blank" class="hero__box2-cta">email: aleccalvo08@gmail.com</a>
         </div>
         <div class="hero__nav">
           <li class="hero__nav-list">
@@ -262,11 +262,9 @@
                       <path class="linkedin-icon" d="M0 16h4V5H0zM13.36 5C10.39 5 10 6.77 10 6.77V5H6v11h4v-6s0-2 1.7-2c1 0 1.3.9 1.3 2v6h4v-6c0-3.13-1.36-5-3.64-5zM2 0a2 2 0 1 0 2 2 2 2 0 0 0-2-2z" id="LinkedIn_Square" data-name="LinkedIn Square"/>
                 </svg>
             </a>
-              <a class="contact__social-buttons" href="http://instagram.com/celaart" target="_blank">
-              <svg class="instagram-container" viewBox="0 0 20 20">
-                <g id="Layer_2" data-name="Layer 2">
-                  <path class="instagram-icon" d="M10 14a4 4 0 1 0-4-4 4 4 0 0 0 4 4zm7-11h-3v3h3zm3 13a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V4a4 4 0 0 1 4-4h12a4 4 0 0 1 4 4zm-4-6A6 6 0 1 1 4.1 9H2v7a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9h-2.1a6 6 0 0 1 .1 1z" id="Web"/>
-                </g>
+              <a class="contact__social-buttons" href="http://behance.net/aleccalvo2" target="_blank">
+              <svg class="behance-container" viewBox="0 0 372.2 232.13">
+                <path class="behance-icon" d="M0 0h3.47c35.46 0 70.91 0 106.37.05 11.85 0 23.57 1.22 34.84 5.3 19.1 6.91 31.91 19.61 36.14 39.86 3.2 15.35 2.61 30.38-5.61 44.34-4 6.77-9.87 11.57-16.55 15.48-1.29.75-2.6 1.47-4.28 2.42 3.44 1.69 6.5 3 9.35 4.61 17.89 10.32 25.28 26.71 26.08 46.5.95 23.56-7.47 43.23-25.95 58.2a60.32 60.32 0 0 1-30.91 12.85 273.46 273.46 0 0 1-31.64 2.39c-32.5.3-65 .11-97.51.11H0zm53.43 191.84h10.39c16.29-.21 32.6-.15 48.88-.77 7.85-.3 15.24-2.91 20.73-9.08 7.36-8.27 8.45-18.23 7.2-28.66s-7.1-17.47-16.94-20.26a86.46 86.46 0 0 0-21-2.95c-15.38-.42-30.77-.14-46.16-.13-1 0-2 .09-3.07.15zm0-100.48c.86.07 1.35.14 1.85.14 15.78 0 31.57.26 47.34-.14a77.79 77.79 0 0 0 18.26-2.91C128 86.5 133.43 82 135 74.35a47.47 47.47 0 0 0 1.11-10.85c-.28-11.53-5.31-18.2-16.51-20.6a127.91 127.91 0 0 0-23-2.54c-13.53-.39-27.08-.12-40.62-.1-.86 0-1.73.12-2.62.19zM372.11 153.94H252.4c-.28.32-.52.47-.52.61.5 22.74 12.69 37.67 34.75 40.32 7.78.94 15.45.39 22.78-2.71 5.88-2.48 10.86-6.14 13.94-11.8 1.74-3.19 3.9-4.2 7.51-4.12 11.92.25 23.84.1 35.76.1h3.54c-.26 5.95-2.44 11-5.21 15.64-11.22 18.86-27.37 31.27-49 35.9-26.44 5.66-51.55 2.74-74.8-12-17.11-10.88-27-26.52-30.66-46.13-4.09-21.73-4-43.47 3.32-64.52 9.27-26.54 28.33-42.9 55.65-48.71 23.06-4.9 45.64-2.75 66.55 9.17 12.22 7 20.81 17.47 27.16 29.84a81.79 81.79 0 0 1 8.86 34.62c.31 7.76.08 15.58.08 23.79zm-44.68-28.82c-1.26-22.43-15.92-34.78-37.12-35.06-22.88-.31-34.58 14.46-37.19 35.06zM336.45 9.9v22.77h-93.09V9.9z"/>
               </svg>
             </a>
         </div>
